--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnacanvas/draw.svg",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "SVG drawing utilities",
   "repository": {
     "type": "git",
@@ -17,11 +17,16 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-typescript": "^7.23.3",
+    "@types/uuid": "^9.0.8",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@svgdotjs/svg.js": "^3.2.0",
+    "uuid": "^9.0.1"
   }
 }
