--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnacanvas/draw.svg",
-  "version": "3.6.0",
+  "version": "3.7.0",
   "description": "SVG drawing utilities",
   "repository": {
     "type": "git",
@@ -18,13 +18,14 @@
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-typescript": "^7.23.3",
     "@types/uuid": "^10.0.0",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "babel-jest": "^30.1.2",
+    "canvas": "^3.2.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "@rnacanvas/value-check": "^1.14.1",
